--- a/Plagins/FTP.resx
+++ b/Plagins/FTP.resx
@@ -117,7 +117,58 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="contextMenuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="создатьЗаписьToolStripMenuItem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAABl0RVh0U29m
+        dHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAJASURBVDhPnZPfS5NRGMefq4L+B11ZFEGJ5m1110W/
+        yZCIuivoKrAf4E1sLcO5mT8KMsSLLoKKmKXTLeZcNgzRoa8xanOxTUf1rr3ONnFKyurbc87m9g6Dogc+
+        POc973m+z/e87zm03+JO7zK7YDA5UWkcKsNgGkLVbSf2NL/Wqi1uOmD1UJ2tHBLFf4uxyAK2m5xPudkm
+        ERKdRQzMJuBgBsP53M+I2HrNLvPoJ02IPJNO9ALCqgh3RMNIVIM3uiCzO5KU89uu92E191OOhRPejr3W
+        OrxZwDefwlh8Ee8YkX1zKTnfaJ+RIlsa80528DepaRXFXuZNSWDi83dMfknDX0A8xzOr8p0+Kk0uVLf6
+        qNbmpxqrUhJQ1CXMJJbwvoAYK2oG018Zfqeoy3JdhdGLfZYAnXtA1MAUBYLaMkJ/JItwag2xtFyGClMA
+        9Z1EZ+8T1TNFgehiVhIrYwXx9DqSWaBl8BIOmglHLITjbYTTHdR9pksnkMj+wDcmqUNbWUdmDWhzXcaF
+        XkJvgBBM38TjD4QrTwinOuhRUaDvo4pXQRX9oRKOEP/OaE52fugndE6QXNs1SeiZZif3CGQoCIhiR4gP
+        kjhMBZxhPhNzv3DoDmFKvSHXbYSSaMJR3grx6ZITLwvdB1hkA8eshuFYTgrYRgnNI3kHIrf7CCeEg3+5
+        C8/Hr+J8N6HFQxifb5L5Yg9/UCPZae+tF2+FiHAibp8eMVdl9mD33SkctjXgZDvhGNsWnWUx/wOGdjJ1
+        /wEXE/0GG++2PsGrSHoAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="изменитьЗаписьToolStripMenuItem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAABl0RVh0U29m
+        dHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAI7SURBVDhPjZPdS5NRHMd3VVB0U0GQsA01YkRXXXRX
+        0I1XQX9BEERUFzErCGvuMQe2JAiCpCDYnbE53Utuc5HNpaKtmkHpNtlLa7k33eZyLpPVt/M7O3uDpL7w
+        4ZznPOf7Pb/nPOfIjt9zFzrvOqGQHJBrx1tQSONo73PgqM6Vle0kMv9L0+FVKCXHsLC0ilYm2YIp2Bkv
+        QtXWyiDt7jbz1rOcpZDnwtYQlUpyh7N4FcliMrLKW3c4w8f3XB9FufKL999QJTqXSVirqgV4v6xhOp7D
+        DINab2yNj6vNCzxkl7payUG2J8JaVS1gPpHH228F+AT0HF8v83fN2tvrRPS+B4uDr6tBtQB/soiFVBEf
+        BdT3J9fxgcP6mRKfp5HuIGGLY27oHfy9Y6gHLGU3EPgrmwjkthHaAG72SEikMuh/oIfz9kv4rjxpBERy
+        JU60mXwZ0WIF0S1gTt2GQsgMSf8IEx4vrmlu0SecqAekSltIMzKC9OZPpH8Ayd/sHHS3A7OnAZMSQasO
+        N3q0VXPzHowuJmFZSsIaINKwhPIYiVUwy81ngJFjwLP9MF5VNcwkhQggsz3ADlIwDftyDpbYNubVcmDm
+        FGBUAU8PwHBRhcP6962/kZ0uHjAmVrexAGv4O0rGk8CKHvikBYb24fH5I3yeUjfZGrDTXTBoz8E1zMyf
+        B2G40CFGgc7+idYAlcY0RSFUCd0+ueREm24KfZfPYuBSF74+7MKhAR8UbGUy03xhrauDQZvyv9B8IZns
+        D95sgg8PbEPNAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="удалитьЗаписьToolStripMenuItem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAABl0RVh0U29m
+        dHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAJXSURBVDhPnZNLTFNBFIYn8ZUYIws32GpLER+NtlKK
+        Rgy6ce3OhS5U2BgTNzyibJAqxBAgTXwkunCvpt5qH1RzxcY2oFRiwY2Uais0amsvUCjWpoW2vzND7SOY
+        aDzJlzMzd84/59w5QzS94kLN9WdQGhxQdA2WoTQMovqaA3t7nkvaXpHU9Q0RfX85hAX/zYYDs6gyOB7Q
+        w9aIEHYyM+tUBDaK3b/qLRRmm1oF7l99lJjIQ55JqQBLlZkYkPAyKMEZnOVeDET5+uY2M5KZLB+zTGg5
+        gq7vxVoB98wchkPzGKEw756e4+stwgQX2diymomK/pNaWoZuwMkpCHi+xPD26wLG8rB5aDHJv5Wagpa8
+        f8BF1LdGyZ7bY0WB8XAcE5E43udh4/HwIrycOLyRJb5ve/cQqu54yah6C3FrthUFJqUf8P2RBHyxFKYS
+        fBsqjO/gUlcQUbeDOOpVRYHgfILzuZTYT0wvpTGTAVxXL8MkWw9LzVZYD1TColPetR3aVRSIJFL4TomW
+        kkxDygEjXR143bgbuHEJMLYD/a3wnDwCS53qXkHA/CGMp5NhWHwl+KOwfEvBVLkOuHKak2s/BXTQced5
+        mLU7QZR5ARZs89FGYs30m08S7JFlPJZtoI3yiO8rmFOAoJGD0O7i8yf5061UpIBfgjWcgkBrzzYfw0pT
+        I9LnjmKFjrMXTsBcq8A/vYXQzW68qZchc/Ywcs0NWG5qgPv4PtzXKgSi7jS5mAjLhL2+cuhajwi50YO2
+        MxdhPyiHWaeCWV9Ng5UCoXdAIfQuiP4/oMGE/ALPQLuP/ARGuwAAAABJRU5ErkJggg==
+</value>
+  </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAEAICAAAAEACACoCAAAFgAAACgAAAAgAAAAQAAAAAEACAAAAAAAAAQAAAAAAAAAAAAAAAEAAAAB
